package nsysu.resources;

public final class sampleApplicationProperties {
    static public String mongodbURL = "";
    static public String Database = "";
    static public String Collection = "";

    private sampleApplicationProperties() {
    }
}
