@startuml
enum nsysu.util.enumtype.StatusType {
+  Active
+  Frozen
+  Closed
- String str
+ String getStr()
}


interface nsysu.bank.account.CanWithdraw {
~ boolean withdraw(double)
~ void handleWithdraw(String,double)
}

abstract class nsysu.bank.account.InterestAccount {
# Date date
# double rate
+ double getRate()
# {abstract}void updateBalanceWithInterest()
+ void refresh()
}


class nsysu.util.mongodb.MongoDBUtil {
- {static} MongoCollection<Document> accountsCollection
- {static} MongoCollection<Document> usersCollection
- {static} Random random
- {static} MongoCollection<Document> getCollection(CollectionType)
+ {static} T getData(CollectionType,String,asTarget,Class<T>)
+ {static} void setData(CollectionType,String,asTarget,T)
+ {static} void updateData(CollectionType,String,asTarget,T)
+ {static} void addToList(CollectionType,String,asTarget,T)
- {static} String genUniqueId(MongoCollection<Document>,String)
+ {static} String addNewUser(String,String,RoleType)
+ {static} boolean deleteData(CollectionType,String)
+ {static} String addNewAccount(String,AccountType)
+ {static} void addNewHistory(String,double,String,String)
}


enum nsysu.util.mongodb.CollectionType {
+  USERS
+  ACCOUNTS
}

enum nsysu.util.enumtype.AccountType {
+  SavingsAccount
+  TimeDeposit
+  CheckingAccount
+  USDAccount
- String str
+ String getStr()
}


class nsysu.util.exception.ClosedUserException {
}
class nsysu.util.exception.NegativeBalanceException {
}
class nsysu.util.exception.IdNotFindException {
}
enum nsysu.util.enumtype.RoleType {
+  User
+  Administrator
- String str
+ String getStr()
}


enum nsysu.util.enumtype.AccountTarget {
+  Balance
+  TimeOfLastView
+  Type
+  Status
+  History
- String str
+ String getStr()
}


class nsysu.bank.account.TimeDeposit {
# void updateBalanceWithInterest()
}

class nsysu.util.exception.TargetNotFindException {
}
class nsysu.resources.sampleApplicationProperties {
+ {static} String mongodbURL
+ {static} String Database
+ {static} String Collection
}

abstract class nsysu.bank.account.BasicAccount {
- String accountId
- String type
# double balance
# String status
# List<HistoryRecord> history
+ {static} BasicAccount loadAccount(String)
+ String getId()
+ double getBalance()
+ String getType()
+ String getStatus()
+ List<HistoryRecord> getHistory()
# void updateBalance(double)
+ void refresh()
+ boolean transfer(String,double,String)
+ String toString()
}


class nsysu.test.TestConnect {
+ {static} void main(String[])
}

class nsysu.util.exception.SameUserNameException {
}
class nsysu.test.Test2 {
+ {static} void main(String[])
}

class nsysu.bank.account.ForeignAccount {
# void updateBalanceWithInterest()
+ boolean withdraw(double)
}

class nsysu.bank.account.CheckingAccount {
+ boolean transferOut(String,double,String)
+ boolean withdraw(double)
}

class nsysu.test.Test {
+ {static} void main(String[])
}

class nsysu.util.sqlaccess.UserData {
+ {static} String getUserName(String)
+ {static} String getRole(String)
+ {static} List<String> getAccount(String)
+ {static} String getPassword(String)
+ {static} String getStatue(String)
+ {static} String addAccount(String,AccountType)
+ {static} void setPassword(String,String)
+ {static} void deactiveUser(String)
+ {static} void deleteUser(String)
+ {static} String addNewUser(String,String,RoleType)
}

class nsysu.bank.HistoryRecord {
- Date date
- int amount
- String accountId
- String anotherId
- String description
+ Date getDate()
+ int getAmount()
+ String getAnotherId()
+ String getDescription()
+ String getAccountId()
+ int compareTo(HistoryRecord)
+ String toString()
}


interface nsysu.util.enumtype.asTarget {
~ String getStr()
}

class nsysu.bank.role.Administrator {
}
class nsysu.util.sqlaccess.AccountData {
+ {static} String getType(String)
+ {static} double getBalance(String)
+ {static} Date getLastView(String)
+ {static} List<HistoryRecord> getHistory(String)
+ {static} String getStatus(String)
+ {static} void incBalance(String,double)
+ {static} void setLastView(String)
+ {static} void addOneHistory(String,double,String,String)
+ {static} void setStatus(String,StatusType)
+ {static} boolean transferable(String)
}

class nsysu.resources.ApplicationProperties {
+ {static} String mongodbURL
+ {static} String Database
+ {static} String Accounts
+ {static} String Users
}

abstract class nsysu.bank.role.Person {
- String userId
- String name
- String role
- String status
- String password
# ArrayList<BasicAccount> account
+ String getId()
+ String getName()
+ String getRole()
+ String getStatus()
+ String getPassword()
+ void setPassword(String)
+ void refresh()
}


class nsysu.bank.role.User {
+ String addAccount(AccountType)
}

interface nsysu.bank.account.CanTransferOut {
+ boolean transferOut(String,double,String)
}

enum nsysu.util.enumtype.UserTarget {
+  UserName
+  Password
+  Role
+  Status
+  Accounts
- String str
+ String getStr()
}


class nsysu.bank.account.SavingAccount {
# void updateBalanceWithInterest()
+ boolean transferOut(String,double,String)
+ boolean withdraw(double)
}



nsysu.bank.account.BasicAccount <|-- nsysu.bank.account.InterestAccount
nsysu.util.exception.RuntimeException <|-- nsysu.util.exception.ClosedUserException
nsysu.util.exception.RuntimeException <|-- nsysu.util.exception.NegativeBalanceException
nsysu.util.exception.RuntimeException <|-- nsysu.util.exception.IdNotFindException
nsysu.bank.account.InterestAccount <|-- nsysu.bank.account.TimeDeposit
nsysu.util.exception.RuntimeException <|-- nsysu.util.exception.TargetNotFindException
nsysu.util.exception.RuntimeException <|-- nsysu.util.exception.SameUserNameException
nsysu.bank.account.CanWithdraw <|.. nsysu.bank.account.ForeignAccount
nsysu.bank.account.InterestAccount <|-- nsysu.bank.account.ForeignAccount
nsysu.bank.account.CanWithdraw <|.. nsysu.bank.account.CheckingAccount
nsysu.bank.account.CanTransferOut <|.. nsysu.bank.account.CheckingAccount
nsysu.bank.account.BasicAccount <|-- nsysu.bank.account.CheckingAccount
nsysu.bank.Comparable <|.. nsysu.bank.HistoryRecord
nsysu.bank.role.Person <|-- nsysu.bank.role.Administrator
nsysu.bank.role.Person <|-- nsysu.bank.role.User
nsysu.bank.account.CanTransferOut <|.. nsysu.bank.account.SavingAccount
nsysu.bank.account.CanWithdraw <|.. nsysu.bank.account.SavingAccount
nsysu.bank.account.InterestAccount <|-- nsysu.bank.account.SavingAccount
@enduml